--- a/html_source_file/index.html
+++ b/html_source_file/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
   <head>
     <title>Your Name | Your Affiliation</title>
-
+    <meta name="google-site-verification" content="VzV_X14uXKUvQLzoSqGLydSs1tmt4nAsFNR0llH6iV0" />
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
